[project]
name = "openart-comfyui-deploy"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["aiofiles", "pydantic", "opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/kulsisme/openart-comfyui-deploy.git"

[tool.comfy]
PublisherId = "openart"
DisplayName = "openart-comfyui-deploy"
Icon = ""
