[project]
name = "openart-comfyui-deploy"
description = "NODES: External Boolean (ComfyUI Deploy), External Checkpoint (ComfyUI Deploy), External Image (ComfyUI Deploy), External Video (ComfyUI Deploy x VHS), OpenArt Text, Image Websocket Output (ComfyDeploy), ..."
version = "1.0.0"
license = "LICENSE"
dependencies = ["aiofiles", "pydantic", "opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/kulsisme/openart-comfyui-deploy.git"

[tool.comfy]
PublisherId = "openart"
DisplayName = "openart-comfyui-deploy"
Icon = ""
